ocp40-deployment/cluster-438b_networkpolicyLab/allow_workers2_to_collective2-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-workers2-project-to-database
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: workers2
    ports:
    - port: 3306
      protocol: TCP
  podSelector:
    matchLabels:
      name: database
